# trading-bot-creator

./: .gitignore  01_get_transcripts_from_youtube_playlist.py  02_move_playlist_videos_to_archive.py  03_get_summary_from_transcripts.py  ToDos.txt  discord_func.py  file_mgt.py  ftp_mgt.py  google_apis.py  main.py  openai_instructions.py  pyproject.toml  settings.ini  summary.py  summary_deepseek_openai.py  summary_groq.py  summary_ollama.py  summary_ollama_openai.py  summary_openai.py  transcript_mgt.py  youtube.py  youtube_func.py
testing/: env_test.py  ftp_test.py  groq._test.py  openai_llm_test.py  youtube_playlist_test.py
